--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,8 @@ authors = ["Replit user <<>>"]
 [tool.poetry.dependencies]
 python = "^3.8"
 discord = "^2.0.0"
+python-dotenv = "^0.20.0"
+replit = "^3.2.4"
 
 [tool.poetry.dev-dependencies]
 
